# photopipeline

./: .gitignore  .mcp.json  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_zh.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLUGIN_DEV.md  README.md  README_zh.md  TESTS.md  TEST_CASE_SPECIFICATION.md  TEST_DESIGN_CROSSCHANNEL.md  TEST_DESIGN_CSHARP.md  TEST_DESIGN_RUST.md  USER_GUIDE.md  _gen_doc.py  audit_phase1-3_unit_scenario_tests.md  audit_phase4-5_api_infrastructure_tests.md  audit_phase5-6_ui_crosschannel_tests.md  design_csharp_tests.md  justfile  rust-toolchain.toml  vcpkg.json
.cargo/: config.toml
.github/workflows/: _test-gui.yml  _test-rust.yml  benchmark.yml  build-bundled.yml  ci.yml  (+12 more)
benches/: Cargo.toml  expression_engine.rs  format_encode.rs  parameter_resolution.rs  pipeline_throughput.rs  tile_processing.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/commands/: batch.rs  pipeline.rs  plugin.rs
cli/tests/: integration_test.rs
crates/core/: Cargo.toml
crates/core/src/: color.rs  error.rs  image.rs  lib.rs  metadata.rs  panic_hook.rs  perf.rs  telemetry.rs  types.rs
crates/engine/: Cargo.toml
crates/engine/src/: executor.rs  graph.rs  lib.rs  params.rs  tile.rs
crates/engine/tests/: graph_tests.rs  node_executor_tests.rs  parameter_resolver_tests.rs  tile_engine_tests.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: gui_schema.rs  lib.rs  loader.rs  registry.rs  schema.rs  trait_def.rs
crates/plugins/: Cargo.toml  build.rs
crates/plugins/src/: ai_denoise.rs  avif_encoder.rs  colorspace.rs  exif_rw.rs  gps_set.rs  heif_encoder.rs  jxl_encoder.rs  lens_correct.rs  lib.rs  lut3d.rs  png_encoder.rs  raw_input.rs  tiff_encoder.rs  time_shift.rs  transform.rs
crates/plugins/tests/: parameter_schema_tests.rs  plugin_tests.rs  process_boundary_tests.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: config.rs  lib.rs  main.rs
crates/server/src/commands/: mod.rs  pipeline.rs  plugin.rs
crates/server/src/services/: batch.rs  image.rs  mod.rs  pipeline.rs  plugin.rs
crates/server/tests/: grpc_service_tests.rs
crates/test-defs/: Cargo.toml
crates/test-defs/src/: lib.rs
design_review/: 01_MainWindow.md  02_FilmstripView.md  03_PluginBrowserView.md  04_PreviewView.md  05_PipelineEditorView.md  06_BatchView.md  07_SettingsDialog.md  08_StatusBar.md  09_Plugin_raw_input.md  10_Plugin_transform.md  11_Plugins_colorspace_lut3d_lens.md  12_Plugins_exif_gps_time.md  13_Plugins_encoders.md  14_Plugin_ai_denoise.md  15_CrossPlatform_GUI.md  16_Testing_System.md  FRONTEND_ARCHITECTURE.md  GUI_INTERFACE.md  SPEC_Batch.md  SPEC_DAG.md  SPEC_Filmstrip.md  SPEC_MainWindow.md  SPEC_Plugin_01_raw_input.md  SPEC_Plugin_02_transform.md  SPEC_Plugin_03_colorspace.md  SPEC_Plugin_04_lut3d.md  SPEC_Plugin_05_lens_correct.md  SPEC_Plugin_06_ai_denoise.md  SPEC_Plugin_07_exif_rw.md  SPEC_Plugin_08_gps_set.md  SPEC_Plugin_09_time_shift.md  SPEC_Plugin_10_heif_encoder.md  SPEC_Plugin_11_jxl_encoder.md  SPEC_Plugin_12_avif_encoder.md  SPEC_Plugin_13_tiff_encoder.md  SPEC_Plugin_14_png_encoder.md  SPEC_Plugins.md  SPEC_Settings.md  USER_MANUAL.md  demo_batch.html  (+23 more)
doc/: ARCHITECTURE_DESIGN.md  BACKEND_USER_GUIDE.md  INTERFACE_DESIGN.md
examples/: hdr_pipeline.toml
gui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/photopipeline/: batch.proto
gui/src-tauri/src/: execution.proto  image.proto  lib.rs  main.rs  proto.rs
gui/src-tauri/src/commands/: image_cmds.rs  mod.rs  plugin_cmds.rs
gui/src-tauri/src/data/: mock_plugins.json  mock_schemas.json
gui/src-tauri/src/grpc/: batch_client.rs  image_client.rs  mod.rs  pipeline_client.rs  plugin_client.rs
gui/src-tauri/src/proto_gen/: photopipeline.batch.rs  photopipeline.image.rs  photopipeline.pipeline.rs  photopipeline.plugin.rs
halide_generators/: CMakeLists.txt  colorspace_generator.cpp  resize_generator.cpp  tonemap_generator.cpp
proto/: pipeline.proto  plugin.proto
scripts/: check-crash.ps1  ci-local.ps1  ci-local.sh  collect-libs.sh  gen-cert.ps1  launch-and-monitor.ps1  stage.ps1
tests/: Cargo.toml
tests/e2e/: Cargo.toml
tests/e2e/src/: boundary_pipeline.rs  cli_system.rs  concurrency.rs  encoder_parameters.rs  error_recovery.rs  format_roundtrip.rs  golden_files.rs  gps_integration.rs  metadata_roundtrip.rs  negative_tests.rs  output_verification.rs  parameter_resolution.rs  pipeline_chains.rs  stress_volume.rs
tests/e2e_suite/: Cargo.toml
tests/e2e_suite/src/: main.rs
tests/e2e_suite/src/categories/: cat01_single_plugin.rs  cat02_param_variants.rs  cat03_two_plugin_chain.rs  cat04_three_plugin_chain.rs  cat05_four_plugin_workflow.rs  cat06_pipeline_topology.rs  cat07_format_structure.rs  cat08_param_boundary.rs  cat09_error_paths.rs  cat10_quality_content.rs  cat11_metadata_preservation.rs  cat12_cli_commands.rs  cat13_roundtrip.rs  cat14_known_regressions.rs  mod.rs
tests/e2e_suite/src/common/: bypass_detector.rs  cli_runner.rs  config_builder.rs  image_generator.rs  mod.rs
tests/fixtures/golden/: README.md
tests/grpc_e2e/: Cargo.toml
tests/grpc_e2e/tests/: test_batch_grpc.rs  test_concurrency.rs  test_cross_channel_consistency.rs  test_error_paths.rs  test_format_grpc.rs  test_image_service.rs  test_multi_plugin_grpc.rs  test_pipeline_service.rs
tests/grpc_e2e/tests/common/: mod.rs
tests/pipeline_integration/: Cargo.toml  test_boundary.rs  test_format_roundtrip.rs  test_multi_plugin.rs  test_single_plugin.rs
tests/pipeline_integration/common/: image_fixtures.rs  mod.rs
tests/stress/: dummy_lib.rs  stress_tests.rs
tests/test_harness/: Cargo.toml
tests/test_harness/src/: lib.rs
tests/test_harness/src/assertions/: golden.rs  image.rs  mod.rs  png.rs  quality.rs  structural.rs  tiff.rs
tests/test_harness/src/fixtures/: golden_patterns.rs  gpx.rs  image.rs  metadata.rs  mod.rs  pipeline.rs
tests/test_harness/src/mocks/: encoder.rs  exiftool.rs  mod.rs  progress.rs
(+283 files in other folders)
