[package]
name = "photopipeline-benches"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"
test = false
bench = false

[[bench]]
name = "pipeline_throughput"
harness = false
path = "pipeline_throughput.rs"

[[bench]]
name = "format_encode"
harness = false
path = "format_encode.rs"

[[bench]]
name = "tile_processing"
harness = false
path = "tile_processing.rs"

[[bench]]
name = "parameter_resolution"
harness = false
path = "parameter_resolution.rs"

[[bench]]
name = "expression_engine"
harness = false
path = "expression_engine.rs"

[dependencies]
photopipeline-core = { path = "../crates/core" }
photopipeline-plugin = { path = "../crates/plugin" }
photopipeline-engine = { path = "../crates/engine" }
photopipeline-plugins = { path = "../crates/plugins" }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
