[package]
name = "photopipeline"
version.workspace = true
edition.workspace = true

[[bin]]
name = "photopipeline"
path = "src/main.rs"

[dependencies]
photopipeline-core = { path = "../crates/core" }
photopipeline-plugin = { path = "../crates/plugin" }
photopipeline-engine = { path = "../crates/engine" }
photopipeline-plugins = { path = "../crates/plugins" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true
uuid.workspace = true
glob.workspace = true
chrono.workspace = true
