[package]
name = "photopipeline-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
bytemuck.workspace = true
strum.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
regex.workspace = true
