[package]
name = "photopipeline-engine"
version.workspace = true
edition.workspace = true

[dependencies]
photopipeline-core = { path = "../core" }
photopipeline-plugin = { path = "../plugin" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
uuid.workspace = true
toml.workspace = true
tracing.workspace = true
rayon.workspace = true
regex.workspace = true
futures.workspace = true
chrono.workspace = true
