[package]
name = "photopipeline-plugin"
version.workspace = true
edition.workspace = true

[dependencies]
photopipeline-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
strum.workspace = true
uuid.workspace = true
toml.workspace = true
regex.workspace = true
tracing.workspace = true
libloading = "0.8"
