[package]
name = "photopipeline-plugins"
version.workspace = true
edition.workspace = true

[features]
libheif-native = ["dep:libheif-sys"]
libjxl-native = ["dep:libjxl-sys"]
libraw-native = ["dep:libraw-sys"]
lcms2-native = ["dep:lcms2-sys"]

[dependencies]
photopipeline-core = { path = "../core" }
photopipeline-plugin = { path = "../plugin" }
photopipeline-halide = { path = "../halide" }
photopipeline-oiio = { path = "../oiio" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
parking_lot.workspace = true
tracing.workspace = true
regex.workspace = true
bytemuck.workspace = true
kamadak-exif.workspace = true
tiff = "0.9"
miniz_oxide = { version = "0.8", features = ["with-alloc"] }
ravif = { version = "0.11", default-features = false, features = ["threading"] }
rav1e = { version = "0.7", default-features = false, features = ["threading"] }
imgref = "1"
png = "0.17"
rgb = "0.8"
libheif-sys = { workspace = true, optional = true }
libjxl-sys = { workspace = true, optional = true }
libraw-sys = { workspace = true, optional = true }
lcms2-sys = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
