[package]
name = "photopipeline-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "photopipeline-server"
path = "src/main.rs"

[dependencies]
photopipeline-core = { path = "../core" }
photopipeline-plugin = { path = "../plugin" }
photopipeline-engine = { path = "../engine" }
photopipeline-plugins = { path = "../plugins" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = { version = "0.13", features = ["transport", "codegen"] }
prost = "0.13"
prost-types = "0.13"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
parking_lot = "0.12"

[build-dependencies]
tonic-build = "0.13"
