[package]
name = "photopipeline-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "photopipeline"
path = "src/main.rs"

[dependencies]
photopipeline-core = { path = "../core" }
photopipeline-plugin = { path = "../plugin" }
photopipeline-engine = { path = "../engine" }
photopipeline-plugins = { path = "../plugins" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { version = "0.13", features = ["transport", "codegen"] }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
uuid = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }
glob = { workspace = true }
toml = { workspace = true }
indicatif = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio.workspace = true
serde_json.workspace = true
tokio-stream = "0.1"
futures.workspace = true

[build-dependencies]
tonic-build = "0.13"
