[package]
name = "photopipeline-test-defs"
description = "Shared JSON test case definitions and loader for the Photopipeline test infrastructure. Used by both Rust and C# test systems."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
