[package]
name = "photopipeline-gui"
version = "0.1.0"
description = "Photopipeline GUI — Tauri v2 desktop application"
authors = ["Zhang Haozhi"]
edition = "2021"

[lib]
name = "photopipeline_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.13"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"
