[package]
name = "photopipeline-e2e-tests"
version = "0.1.0"
edition = "2024"
publish = false

[[test]]
name = "pipeline_chains"
path = "src/pipeline_chains.rs"

[[test]]
name = "parameter_resolution"
path = "src/parameter_resolution.rs"

[[test]]
name = "gps_integration"
path = "src/gps_integration.rs"

[[test]]
name = "format_roundtrip"
path = "src/format_roundtrip.rs"

[[test]]
name = "encoder_parameters"
path = "src/encoder_parameters.rs"

[[test]]
name = "boundary_pipeline"
path = "src/boundary_pipeline.rs"

[[test]]
name = "error_recovery"
path = "src/error_recovery.rs"

[[test]]
name = "concurrency"
path = "src/concurrency.rs"

[[test]]
name = "stress_volume"
path = "src/stress_volume.rs"

[[test]]
name = "negative_tests"
path = "src/negative_tests.rs"

[[test]]
name = "cli_system"
path = "src/cli_system.rs"

[dependencies]
photopipeline-core = { path = "../../crates/core" }
photopipeline-plugin = { path = "../../crates/plugin" }
photopipeline-engine = { path = "../../crates/engine" }
photopipeline-plugins = { path = "../../crates/plugins" }
test-harness = { path = "../test_harness" }
serde = { version = "1", features = ["derive"] }
regex = "1"
toml = "0.8"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
once_cell = "1"
parking_lot = "0.12"
