[package]
name = "photopipeline-e2e-runner"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "photopipeline-e2e-runner"
path = "src/main.rs"

[dependencies]
photopipeline-core = { path = "../../crates/core" }
photopipeline-plugin = { path = "../../crates/plugin" }
photopipeline-engine = { path = "../../crates/engine" }
photopipeline-plugins = { path = "../../crates/plugins" }
test-harness = { path = "../test_harness" }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
clap = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation"] }
