[package]
name = "photopipeline-grpc-e2e-tests"
version = "0.1.0"
edition = "2024"
publish = false

[[test]]
name = "test_image_service"
path = "tests/test_image_service.rs"

[[test]]
name = "test_pipeline_service"
path = "tests/test_pipeline_service.rs"

[[test]]
name = "test_multi_plugin_grpc"
path = "tests/test_multi_plugin_grpc.rs"

[[test]]
name = "test_format_grpc"
path = "tests/test_format_grpc.rs"

[[test]]
name = "test_batch_grpc"
path = "tests/test_batch_grpc.rs"

[[test]]
name = "test_error_paths"
path = "tests/test_error_paths.rs"

[[test]]
name = "test_concurrency"
path = "tests/test_concurrency.rs"

[[test]]
name = "test_cross_channel_consistency"
path = "tests/test_cross_channel_consistency.rs"

[dependencies]
photopipeline-core = { path = "../../crates/core" }
photopipeline-plugin = { path = "../../crates/plugin" }
photopipeline-engine = { path = "../../crates/engine" }
photopipeline-plugins = { path = "../../crates/plugins" }
photopipeline-server = { path = "../../crates/server" }
test-harness = { path = "../test_harness" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { version = "0.13", features = ["transport", "codegen"] }
prost = { workspace = true }
prost-types = { workspace = true }
uuid = { version = "1", features = ["v4"] }
parking_lot = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile = "3"
glob = { workspace = true }
