[package]
name = "pipeline-integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[[test]]
name = "test_single_plugin"
path = "test_single_plugin.rs"

[[test]]
name = "test_multi_plugin"
path = "test_multi_plugin.rs"

[[test]]
name = "test_format_roundtrip"
path = "test_format_roundtrip.rs"

[[test]]
name = "test_boundary"
path = "test_boundary.rs"

[dependencies]
photopipeline-core = { path = "../../crates/core" }
photopipeline-plugin = { path = "../../crates/plugin" }
photopipeline-engine = { path = "../../crates/engine" }
photopipeline-plugins = { path = "../../crates/plugins" }
test-harness = { path = "../test_harness" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"
