[package]
name = "test-harness"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
photopipeline-core = { path = "../../crates/core" }
photopipeline-plugin = { path = "../../crates/plugin" }
photopipeline-engine = { path = "../../crates/engine" }
serde = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
